--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "otmjka-ui-components",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "react, material ui, storybook, ui components library",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "sideEffects": false,
   "scripts": {
-    "build": "node esbuild.config.js",
+    "build": "node esbuild.config.js && tsc --emitDeclarationOnly",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepublishOnly": "npm run build"
@@ -15,15 +29,16 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
-    "@storybook/addon-essentials": "^7.0.0",
+    "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
     "@storybook/addon-onboarding": "^8.3.6",
     "@storybook/blocks": "^8.3.6",
-    "@storybook/react": "^7.0.0",
-    "@storybook/react-vite": "^7.0.0",
+    "@storybook/react": "^8.3.6",
+    "@storybook/react-vite": "^8.3.6",
     "@storybook/test": "^8.3.6",
     "@types/react": "^18.0.0",
     "esbuild": "^0.19.0",
