--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,29 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "jsx": "react",
-    "declaration": true,
-    "declarationDir": "dist",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "declarationDir": "./dist",
+    "jsx": "react-jsx",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/*.stories.tsx"]
+  "include": [
+    "src",
+    ".storybook/**/*" // Include Storybook configuration
+  ],
+  "exclude": ["node_modules", "dist"]
 }
