--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otmjka-ui-components",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "react, material ui, storybook, ui components library",
   "type": "module",
   "main": "dist/index.js",
@@ -30,12 +30,16 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/material-icons": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
     "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/addon-themes": "^8.3.6",
     "@storybook/blocks": "^8.3.6",
     "@storybook/react": "^8.3.6",
     "@storybook/react-vite": "^8.3.6",
