--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otmjka-ui-components",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "react, material ui, storybook, ui components library",
   "type": "module",
   "main": "dist/index.js",
@@ -21,6 +21,7 @@
     "build": "rm -rf dist && node esbuild.config.js && tsc --emitDeclarationOnly",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "test": "vitest",
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
@@ -44,15 +45,21 @@
     "@storybook/react": "^8.3.6",
     "@storybook/react-vite": "^8.3.6",
     "@storybook/test": "^8.3.6",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.0.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "esbuild": "^0.19.0",
     "glob": "^10.3.10",
     "prettier": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.53.1",
     "storybook": "^8.3.6",
     "styled-components": "^6.1.13",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^2.1.4"
   },
   "prettier": {
     "printWidth": 80,
