--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otmjka-ui-components",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "react, material ui, storybook, ui components library",
   "type": "module",
   "main": "dist/index.js",
@@ -21,8 +21,12 @@
     "build": "rm -rf dist && node esbuild.config.js && tsc --emitDeclarationOnly",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -- -o ./docs --quiet",
-    "test": "vitest",
-    "prepublishOnly": "npm run build"
+    "test": "vitest run --coverage",
+    "test-dev": "vitest",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint ",
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -31,6 +35,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
     "@emotion/styled": "^11.13.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.15.0",
     "@fontsource/material-icons": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.5",
@@ -49,9 +55,18 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react": "^4.3.3",
     "esbuild": "^0.19.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "glob": "^10.3.10",
+    "globals": "^15.12.0",
+    "otmjka-eslint-prettier-config": "^1.0.0",
     "prettier": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -59,17 +74,7 @@
     "storybook": "^8.3.6",
     "styled-components": "^6.1.13",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.4"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "endOfLine": "lf"
   }
 }
