--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test-dev": "vitest",
     "prepublishOnly": "npm run build",
     "lint": "eslint ",
-    "format": "prettier --write .",
-    "prepare": "husky"
+    "format": "prettier --write ."
   },
   "peerDependencies": {
     "react": "^18.0.0",
